Ingress/deployment-todo.yaml
# My first deployment.yaml file.
# Container port is the one where your application is running. 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  labels:
    app: todo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-deployment
  template:
    metadata:
      labels:
        app: todo-deployment
    spec:
      containers:
      - name: todo-deployment
        image: khannashiv/todoapp:34
        ports:
        - containerPort: 8000
