Ingress/service-todo.yaml
# My first service.yaml file.
# Target port is the one where your application is running. 
# One can look for the target port by looking at the dockerfile if your application is containerized.
apiVersion: v1
kind: Service
metadata:
  name: my-todo-service
spec:
  type: NodePort
  selector:
    app: todo-deployment
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30002
